--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="Email">Email</string>
     <string name="Password">Password</string>
     <string name="addressHint">Enter the Address.</string>
-    <string name="addressButt">주소로 이동</string>
+    <string name="addressButt">검색</string>
 
     <string name="google_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDOmTBS7CnWwQV-RSjBL8Kq2Tvtn2G_yus</string>
 </resources>
