--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Mobinity</string>
 
     <string name="login">로그인</string>
+    <string name="logout">로그아웃</string>
     <string name="signUp">회원가입</string>
     <string name="login_img">login_img</string>
     <string name="sns_img">sns_img</string>
@@ -11,4 +12,5 @@
     <string name="addressButt">검색</string>
 
     <string name="google_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDOmTBS7CnWwQV-RSjBL8Kq2Tvtn2G_yus</string>
+    <string name="kakao_key">767c5a424b70976aed8fd691382f7051</string>
 </resources>
