--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,17 @@
     <string name="sns_img">sns_img</string>
     <string name="Email">Email</string>
     <string name="Password">Password</string>
-    <string name="addressHint">Enter the Address.</string>
+    <string name="addressHint">주소를 입력하세요.</string>
     <string name="addressButt">검색</string>
 
     <string name="google_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDOmTBS7CnWwQV-RSjBL8Kq2Tvtn2G_yus</string>
     <string name="kakao_key">767c5a424b70976aed8fd691382f7051</string>
+
+    <string name="title_activity_map">Mobinity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">사용자 이름</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_notification">알림</string>
+    <string name="action_settings">설정</string>
 </resources>
